# terrasensetk

./: .gitignore  .readthedocs.yaml  LICENSE  LUCAS_reading.ipynb  Lucas_Copernicus.ipynb  Lucas_Workflow.ipynb  Measuring the water level of a Theewaterskloof Dam in South Africa.ipynb  README.md  __init__.py  __main__.py  documentation.sh  meta.yaml  pyproject.toml
algorithms/: IAlgorithm.py  ICrossValidation.py  IFeatureSelection.py  KFold.py  SequentialFeatureSelector.py  SupportVectorRegression.py  __init__.py
algorithms/FeatureSelection/: IFeatureSelection.py  SequentialFeatureSelector.py  __init__.py
algorithms/Regression/: GradientBoostingRegressor.py  MLPRegressor.py  PLSRegressor.py  RandomForestRegressor.py  SupportVectorRegression.py  __init__.py
dataset/: Dataset.py  Downloader.py  Parser.py  Reader.py  TSPatch.py  __init__.py  tmp.py
dataset/parser/: IParser.py  Parser.py
docs/: conf.py  index.rst  modules.rst  requirements.txt  terrasensetk.dataset.rst  terrasensetk.performance.metrics.rst  terrasensetk.performance.rst  terrasensetk.rst  terrasensetk.utils.rst
docs/source/: conf.py  index.rst  terrasensetk.algorithms.FeatureSelection.rst  terrasensetk.algorithms.Regression.rst  terrasensetk.algorithms.rst  terrasensetk.dataset.parser.rst  terrasensetk.experiment.rst
experiment/: Experiment.py  __init__.py
parser/: Parser.py
performance/: ICrossValidation.py  IFeatureSelection.py  KFold.py  SequentialFeatureSelector.py  __init__.py
utils/: ArgChecker.py  Results.py  __init__.py  eotasks.py  filtervectortoraster.py  utils.py
(+25 files in other folders)
