[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TerraSenseTK"
version = "1.0.0"
authors = [
  { name="Manuel Pereira", email="afonso.pereira4525@gmail.com" },
]
description = "A toolkit for performing Remote Soil Sensing Experiments."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://gitlab.com/manelpereira/terrasensetk"
"Bug Tracker" = "https://gitlab.com/manelpereira/terrasensetk/issues"